[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["V_A_N <V_A_N-1_94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
